src/styles.css
@import "~bootstrap/dist/css/bootstrap.css";
@import '/src/assets/fonts/_fonts.css';

:root {
    /* colour palette */
    --background-color: #E9ECEF;
    --primary-color: #32AEAB;
    --white: #F8F9FA;
    /*card background, header background, background color for containers*/
    --black: #212529;
    /* --light-grey: #ced4da; */
    --grey: #ADB5DB;
    --light-grey: #6C757D;
    --lighter-grey: #DEE2E6;

    --dark: #343A40;
    /*border outline, number input, box outline, checkbox outline */
    --darker: #212529;

    /* font-family: */
    --heading-font: 'Roboto Condensed', sans-serif;
    --body-font: 'Roboto', sans-serif;

    /* font-weights */
    --black: 900;
    --bold: 700;
    --mediumBold: 500;
    --regular: 400;
    --light: 300;
    --thin: 100;

    /* font-sizes */
    --extra-small: 12px;
    --small: 14px;
    --normal: 16px;
    --medium: 18px;
    --large: 20px;
    --x-large: 25px;
    --xx-large: 35px;

    /* spacing*/
    --s-smaller: 3px;
    --s-small: 5px;
    --s-medium: 10px;
    --s-large: 15px;
    --s-larger: 25px;

    /* --s-default: 1rem;
    --s-x-small: var(--default) * .25;
    --s-small: var(--default) * .5; */
    /* --s-medium: var(--default) * 1.5; */
    /* --s-large: var(--default) * 3; */

    /* input & button heights*/
    --height-large: 44px;
    --height-medium: 36px;
    --height-small: 32px;
    /* input & button widths*/
    --width-large: 36px;

    /* borders */
    --default-border-radius: 3px;
    --grey-border: 1px solid var(--grey);
    --colourful-border: 1px solid var(--primary-color);
    --dark-border: 1px solid var(--dark);
}

body {
    background-color: var(--background-color);
    width: 100% !important;
}

.row {
    margin: 0px !important;
    padding: 0px !important;
}

.card {
    padding: var(--s-large) !important;
    width: 100%;

    background-color: var(--white);
    border-radius: var(--default-border-radius);
}

h1,
title {
    font-family: var(--heading-font);
    font-size: var(--x-large);
    font-weight: var(--bold);
    font-style: normal;
    height: var(--x-large);
    

    display: flex;
    align-items: center;

    color: var(--dark);
}

h2 {
    /*product title, description title*/
    font-family: var(--heading-font);
    font-size: var(--medium);
    font-weight: var(--bold);
    font-style: normal;
    height: auto !important;

    display: flex;
    align-items: center;

    color: var(--dark);
}

h3 {
    font-family: var(--body-font);
    font-size: var(--normal);
    font-weight: var(--bold);
    font-style: normal;
    height: auto !important;

    display: flex;
    align-items: center;

    color: var(--dark);
}

.text-body-secondary,
.greyed-headings {
    font-family: var(--body-font);
    font-size: var(--medium);
    color: var(--light-grey);
}

p, .bold,
label {
    font-family: var(--body-font);
    font-size: var(--normal);
    font-weight: var(--regular);
    font-style: normal;
    height: auto !important;

    display: flex;
    align-items: center;

    color: var(--dark);
}

.bold,
label {
    font-family: var(--body-font);
    font-weight: var(--bold);
}

.greyed {
    font-family: var(--body-font);
    font-size: var(--normal);
    font-weight: var(--normal);
    font-style: normal;
    height: auto !important;

    display: flex;
    align-items: center;

    color: var(--light-grey);
}

fa-icon,
.cart-item-counter {
    height: auto !important;
    width: var(--large);
}

.btn {
    font-family: var(--body-font);

    border-radius: var(--default-border-radius);

    height: var(--height-medium);
    width: 100%;

    display: flex;
    flex-direction: row;

    justify-content: center;
    align-items: center;

    /* margin: var(--s-large); */
    gap: var(--s-large);
}

.btn-icon {
    width: var(--width-large);

    display: flex;
    flex-direction: row;

    justify-content: center;
    align-items: center;
}

input {
    width: 100%;
    height: var(--height-medium);
}

img {
    border-radius: var(--default-border-radius);
    /* width: 100% important!; */
    height: 60%;
    object-fit: contain;
    height: fit-content;
}

input, .form-control {
    border-radius: var(--default-border-radius);
    border-color: var(--grey);
}

/* .vr {
    background-color: var(--grey);
    height: var(--x-large);
    width: 2px;

    border: none !important;
}

hr {
    background-color: var(--grey);
    height: 2px;
    margin: var(--s-small) 0px;

    border: none !important;
} */

@media only screen and (max-width: 768px) {
    #body {
        margin-top: 70px;
        /*make space for sticky navbar on mobile screen*/
    }

    h1,
    title {
        font-size: var(--large);
        margin: var(--s-small) 0px !important;
    }

    h2 {
        font-size: var(--medium);
    }

    .text-body-secondary,
    .greyed-headings {
        font-size: var(--normal);
    }

    p, .bold,
    label{
        font-size: var(--small);
        margin: var(--s-small) 0px !important;
    }

    .mobile-hide {
        /*class property assigned to html elements to hide them on mobile devices*/
        display: none !important;
    }

    .container-fluid {
        padding: 0px 5px;
        margin: var(--s-medium) 0px !important;
    }

    .card {
        padding: var(--s-medium) !important;
    }

}

